--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -1,5 +1,62 @@
-.container{
-  height: 50px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 78px;
   padding: 16px 24px;
-  border-bottom: 1px solid #E4E4E4;
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.header__nav_list,
+.header__logo,
+.header__nav,
+.header__nav_link,
+.header__nav_link_active {
+  display: flex;
+}
+
+.header__logo {
+  align-items: center;
+}
+
+.header__logo_icon {
+  margin-right: 28px;
+}
+.header__logo_mainText {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #19191c;
+}
+.header__logo_primaryText {
+  font-weight: 400;
+  font-size: 16px;
+  color: #828487;
+}
+
+.header__nav_link,
+.header__nav_link_active {
+  align-items: center;
+}
+
+.header__nav_link:not(:last-child) {
+  margin-right: 20px;
+}
+.header__nav_link_active:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header__nav_link {
+  color: #828487;
+}
+
+.header__nav_link_active {
+  color: red;
+}
+
+.header__nav_icon {
+  margin-right: 11px;
+  width: 22px;
+  height: 22px;
+  color: currentColor;
 }
