--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -1,26 +1,31 @@
-.wrapper {
-  padding: 12px 8px 16px 8px;
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-width: 219px;
 
-  /* margin: 16px; */
-  width: 219px;
+  padding: 12px 8px 16px 8px;
   background-color: #ffffff;
   border-radius: 16px;
 
-  outline: 1px solid green;
+  /* outline: 1px solid green; */
+}
+
+.wrapper {
+  flex-grow: 1;
 }
 
 .imageWrapper {
-  width: 203px;
-  height: 158px;
+  overflow: hidden;
+  max-width: 203px;
   border-radius: 16px;
   border: 1px solid black;
+  border-style: hidden;
 }
 
 .foodName {
-  margin: 0;
   margin-top: 12px;
   font-family: 'Poppins';
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
@@ -29,10 +34,8 @@
 }
 
 .foodPrice {
-  margin: 0;
   margin-top: 4px;
   font-family: 'Poppins';
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
@@ -44,4 +47,13 @@
   display: flex;
   justify-content: space-between;
   margin-top: 8px;
+}
+
+.button {
+  margin-top: 4px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 150%;
+    text-align: center;
 }
