--- a/src/components/MainBlock/MainBlock.module.css
+++ b/src/components/MainBlock/MainBlock.module.css
@@ -1,6 +1,6 @@
 .mainBlockWrapper {
-  width: 955px;
-  outline: 1px solid green;
+  width: 956px;
+  /* outline: 1px solid green; */
 }
 
 .searchAndFoodTypeWrapper {
