--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   padding: 22px 24px 22px 58px;
   margin: 0;
-  width: 477px;
+  width: 478px;
 
   font-family: 'Poppins';
   font-style: normal;
@@ -10,5 +10,9 @@
   line-height: 150%;
   color: #c2c2c2;
 
-  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
+
+    border: 1px solid #E4E4E4;
+    /* outline: 1px solid red; */
+    /* border: none */
 }
