--- a/src/components/FoodTypeButton/FoodTypeButton.module.css
+++ b/src/components/FoodTypeButton/FoodTypeButton.module.css
@@ -2,8 +2,6 @@
   padding: 8px 16px;
 
   font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 140%;
   color: #19191C;
@@ -11,10 +9,11 @@
   background-color: #FFFFFF;
   border: 1px solid #E4E4E4;
   border-radius: 40px;
+  /* border: none; */
 }
 
 .active {
   color: #FF5C00;
   background: #FFF5EE;
-    border: 1px solid #FF5C00;
+  border: 1px solid #FF5C00;
 }
