styles rightSideBar chsnges

--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -53,7 +53,9 @@
 .orderOption_button_active {
   color: #ffffff;
   background-color: #ff5c00;
-  z-index: 1;
+
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 .orderOption_text {
