--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -32,6 +32,12 @@
   text-align: center;
   margin-bottom: 24px;
 }
+.signIn_subTitle span {
+  font-size: 14px;
+  line-height: 150%;
+  color: #0a0a0a;
+  margin-left: 4px;
+}
 .signIn_name {
   width: 316px;
   height: 40px;
@@ -120,4 +126,24 @@
 
 .signIn_btn:hover {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.logOut_avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-bottom: 12px;
+}
+.logOut_text {
+  font-size: 14px;
+  line-height: 150%;
+  margin-bottom: 12px;
+}
+
+.logOut_text_name {
+  font-weight: 600;
+  font-size: 18px;
+  text-transform: capitalize;
+}
+.logOut_text:last-child {
+  margin-bottom: 24px;
 }
