--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -147,3 +147,24 @@
 .logOut_text:last-child {
   margin-bottom: 24px;
 }
+
+.forgot_pass_btn {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  background-color: transparent;
+  border-radius: 58px;
+  cursor: pointer;
+  transition: all 0.35s;
+  color: #574ff5;
+  margin-bottom: 24px;
+
+  margin-bottom: 16px;
+  transition: box-shadow 250ms linear;
+}
