--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -168,3 +168,11 @@
   margin-bottom: 16px;
   transition: box-shadow 250ms linear;
 }
+
+.signIn_form_error {
+  text-align: left;
+  font-size: 14px;
+  line-height: 150%;
+  color: #ff5c00;
+  margin-bottom: 8px;
+}
