--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -38,7 +38,7 @@
   color: #0a0a0a;
   margin-left: 4px;
 }
-.signIn_name {
+.signIn_field {
   width: 316px;
   height: 40px;
   padding: 12px 16px;
@@ -50,6 +50,10 @@
   font-size: 16px;
   line-height: 150%;
   margin-bottom: 12px;
+}
+
+.signIn_name_error {
+  background-color: #d44c4c;
 }
 .signIn_form {
   display: flex;
@@ -135,7 +139,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
 }
 .logOut_text {
   font-size: 14px;
@@ -179,4 +183,74 @@
   line-height: 150%;
   color: #ff5c00;
   margin-bottom: 8px;
+}
+
+.inputWrapper {
+  position: relative;
+  margin-bottom: 12px;
+}
+
+.inputContainer {
+  position: absolute;
+  bottom: 6px;
+  right: -1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 38px;
+  height: 38px;
+  background-color: #ff5c00;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.inputContainer svg,
+.upload_image_btn svg,
+.clear_image_btn svg {
+  height: 20px;
+  width: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.inputContainer:hover,
+.upload_image_btn:hover,
+.clear_image_btn:hover {
+  background-color: cornflowerblue;
+}
+
+.inputField {
+  position: absolute;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.clear_image_btn {
+  position: absolute;
+  bottom: 6px;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 38px;
+  height: 38px;
+  background-color: #ff5c00;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.user_edit_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
