--- a/src/components/DashboardTypeBar/DashboardTypeBar.module.css
+++ b/src/components/DashboardTypeBar/DashboardTypeBar.module.css
@@ -8,8 +8,8 @@
   font-size: 12px;
   line-height: 150%;
 
-  border: 1px solid #E4E4E4;
+  border: 1px solid #e4e4e4;
   border-top: none;
   border-bottom: none;
-
+  text-transform: capitalize;
 }
