--- a/src/components/DishTypeButton/DishTypeButton.module.css
+++ b/src/components/DishTypeButton/DishTypeButton.module.css
@@ -1,6 +1,7 @@
 .buttonText {
   padding: 8px 16px;
 
+  text-transform: capitalize;
   font-family: 'Poppins';
   font-size: 14px;
   line-height: 140%;
