--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -157,6 +157,7 @@
 
 .orderOption_addNote_btn,
 .orderOption_pay_btn {
+  position: relative;
   border: none;
   margin: 0;
   padding: 0;
@@ -303,6 +304,7 @@
 }
 
 .orderOption_pay {
+  position: relative;
   padding: 12px 24px 0px 24px;
 }
 
@@ -327,5 +329,104 @@
   background-color: #ff5c00;
 }
 .pay_btn:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  width: 374px;
+  top: 271px;
+  left: 70%;
+  transform: translate(0%, 0%);
+  background: #ffffff;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 12px;
+  transition: opacity 250ms linear, transform 250ms linear;
+  opacity: 1;
+}
+
+.modal_unmount {
+  transform: translate(0%, -50%);
+  opacity: 0;
+}
+
+.add_note {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 24px;
+}
+.add_note_title {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 150%;
+  color: #19191c;
+  margin-bottom: 24px;
+}
+
+.add_note_subTitle {
+  font-size: 12px;
+  line-height: 150%;
+  color: #828487;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.add_note_subTitle_field {
+  width: 316px;
+  height: 200px;
+  padding: 12px 16px;
+  background-color: #ffffff;
+  color: #c2c2c2;
+  border: 1px solid #ff5c00;
+  border-radius: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  resize: none;
+}
+
+.add_note_form_error {
+  text-align: left;
+  font-size: 14px;
+  line-height: 150%;
+  color: #ff5c00;
+  margin-bottom: 8px;
+}
+
+.add_note_btn {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  width: 316px;
+  height: 42px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  background: #ff5c00;
+  border-radius: 58px;
+  cursor: pointer;
+  transition: all 0.35s;
+  color: #fff;
+  margin-bottom: 24px;
+
+  margin-top: 12px;
+  transition: background 150ms linear, box-shadow 250ms linear;
+}
+
+.add_note_btn:disabled {
+  background: #f0b38d;
+}
+
+.add_note_btn:hover {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
