--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -1,13 +1,13 @@
 .container {
   margin: 0 auto;
   width: 360px;
-  border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
   height: calc(100vh - 64px);
 }
 .orderOption {
   padding: 12px 24px 0px 24px;
   border-bottom: 1px solid #e4e4e4;
-  height: 276px;
+  height: 256px;
 }
 
 .orderOption_list {
@@ -16,11 +16,11 @@
   width: 312px;
   height: 44px;
   padding: 4px;
-  background: #f8f9fd;
+
   border-radius: 80px;
   overflow: hidden;
   border: none;
-  background-color: #f8f9fd;
+  background-color: #e4e4e4;
   margin-bottom: 14px;
 }
 .orderOption_item {
@@ -29,8 +29,8 @@
 }
 .orderOption span {
   color: #ff5c00 !important;
-  height: 74px !important;
-  width: 74px !important;
+  height: 50px !important;
+  width: 50px !important;
   text-align: center !important;
 
   margin-left: 110px;
@@ -78,7 +78,8 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin: 24px;
+  margin: 12px 0;
+  padding: 0 12px;
 }
 
 .orderOption_userAvatar {
@@ -94,7 +95,7 @@
   font-size: 18px;
   line-height: 150%;
   margin-bottom: 10px;
-  color: #c2c2c2;
+  color: #3c3c3c;
 }
 
 .orderOption_name {
@@ -168,7 +169,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
-  background: #fff5ee;
+  background: #ffbd8d;
   border-radius: 58px;
   cursor: pointer;
   transition: all 0.35s;
@@ -181,10 +182,20 @@
   color: #fff;
 }
 
+.orderOption_placeholder {
+  padding: 24px 24px 0px 24px;
+  border-bottom: 1px solid #e4e4e4;
+  height: calc(100vh - 440px);
+  text-align: center;
+  font-size: 14px;
+  line-height: 150%;
+  color: #787878;
+}
+
 .orderOption_detail {
   padding: 12px 24px 0px 24px;
   border-bottom: 1px solid #e4e4e4;
-  height: calc(100vh - 466px);
+  height: calc(100vh - 440px);
   overflow-y: scroll;
   scroll-behavior: smooth;
 }
@@ -222,7 +233,7 @@
   display: flex;
   border-bottom: 1px solid #e4e4e4;
   transition: all 0.35s;
-  padding: 6px 4px 0 4px;
+  padding: 6px 4px 1px 4px;
   border-radius: 16px;
 }
 .orderOption_card:hover {
@@ -330,6 +341,10 @@
 }
 .pay_btn:hover {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.pay_btn:disabled {
+  background-color: #e4e4e4;
+  color: #19191c;
 }
 
 .modal {
