--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -1,11 +1,12 @@
 .card {
   display: flex;
-  flex-direction: column;
-  /* height: 100%; */
-  height: 330px;
+  flex-direction: column; 
+  height: 100%;
+  /* height: 330px; */
   width: 219px;
 
-  padding: 12px 8px 16px 8px;
+  /* padding: 12px 8px 16px 8px; */
+  padding: 12px 8px 12px 8px;
   background-color: #ffffff;
   border-radius: 16px;
 
@@ -13,6 +14,10 @@
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
   flex-grow: 1;
   padding: 0;
   border: none;
@@ -24,6 +29,7 @@
 }
 
 .imageWrapper {
+  /* justify-content: flex-start; */
   overflow: hidden;
   width: 203px;
   height: 203px;
@@ -32,19 +38,29 @@
   border-style: hidden;
 }
 
+.moreInfo {
+  position: absolute;
+  top: 20px;
+  left: 27px;
+}
+
+
 .foodName {
-  margin-top: 12px;
+  /* margin-top: 12px; */
+  margin-top: 10px;
   font-family: 'Poppins';
   font-weight: 600;
   font-size: 16px;
-  line-height: 150%;
+  /* line-height: 150%; */
+  line-height: 130%;
   text-align: center;
   color: #19191c;
 }
 
 .foodPrice {
   composes: foodName;
-  margin-top: 4px;
+  /* margin-top: 4px; */
+  margin-top: 2px;
   /* font-family: 'Poppins';
   font-weight: 600;
   font-size: 16px;
@@ -59,17 +75,32 @@
   margin-top: 8px;
 }
 
-.button {
+/* .button-old {
   margin-top: 4px;
   font-family: 'Poppins';
   font-weight: 500;
   font-size: 13px;
   line-height: 150%;
   text-align: center;
+} */
+
+.button {
+  /* margin-top: 4px; */
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1px 50px 1px 50px;
+  background-color: rgb(240, 232, 232);
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 150%;
+  border-radius: 6px;
+  border: 1px solid grey
 }
 
 .button:hover {
-  cursor: pointer
+  cursor: pointer;
+  background-color: rgb(184, 176, 176);
 }
 
 
@@ -115,7 +146,7 @@
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   border-radius: 12px;
   transition: opacity 250ms linear, transform 250ms linear;
-  opacity: 1;
+  opacity: 1;        
 }
 
 .modal_unmount {
@@ -167,6 +198,20 @@
   font-size: 20px;
   line-height: 150%;
   color: #19191c;   
+
+  /* Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: #c2c2c2 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+.descriptionModal::-webkit-scrollbar {
+  width: 9px;
+}
+
+.descriptionModal::-webkit-scrollbar-thumb {
+  background-color: #c2c2c2;
+  border-radius: 4px;
 }
 
 .foodPriceModal {
@@ -200,11 +245,4 @@
   cursor: pointer;
 }
 
-/* .button {
-  margin-top: 4px;
-  font-family: 'Poppins';
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 150%;
-  text-align: center;
-} */
+  
