--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -223,6 +223,9 @@
 .order_payment_method_wrapper {
   display: flex;
   justify-content: space-around;
+  padding-bottom: 24px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #e4e4e4;
 }
 
 .order_payment_method_btn {
@@ -248,5 +251,48 @@
 
 .payment_button_active {
   border: 2px solid #ff5c00;
-  /* box-shadow: rgba(235, 151, 16, 0.208) 0px -2px 6px 0px inset; */
+}
+
+.order_payment_other_wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
+.order_payment_other_btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 108px;
+  height: 96px;
+  border-radius: 16px;
+
+  background-color: #19191c;
+  margin: 0;
+  padding: 0;
+
+  cursor: pointer;
+  transition: box-shadow 250ms linear;
+}
+.order_payment_other_btn svg {
+  fill: #fff;
+  width: 24px;
+  height: 24px;
+  margin-top: 22px;
+}
+.order_payment_other_btn p {
+  color: #fff;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.order_payment_other_btn:hover {
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.order_payment_done_btn {
+  background: linear-gradient(218.57deg, #ffab18 -6.67%, #ff2197 137.69%);
 }
