add bonus Coins and History some marckup and logic

--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -27,6 +27,7 @@
   padding-top: 12px;
   display: flex;
   border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
 }
 
 .orderDetails {
