--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -98,6 +98,20 @@
   color: #3c3c3c;
 }
 
+.orderOption_gift {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  font-size: 16px;
+  line-height: 150%;
+  margin-bottom: 8px;
+  color: #3c3c3c;
+}
+.orderOption_gift p {
+  font-weight: 600;
+  color: #ff5c00;
+}
+
 .orderOption_name {
   width: 316px;
   height: 40px;
